Driver Summarizer (#62)
## Summary
This completes the path of generating data, summarizing it, and
uploading it to DynamoDB.

## Checklist
- [ ] Added Unit Tests
- [ ] Covered by existing CI
- [x] Integration tested
- [ ] Documentation update



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

## Summary by CodeRabbit

- **New Features**
- Enhanced data generation with updated schema for fraud data, including
a new date string field.
- Added functionality to load summary data into DynamoDB with improved
error handling.
	- Introduced summarization and upload capabilities for data processing.
- Updated Docker configuration to include new environment variables for
Spark and AWS integration.

- **Bug Fixes**
- Improved error handling during summary data uploads to ensure better
reliability.

- **Refactor**
- Updated variable handling in scripts for better clarity and
maintainability.
- Refactored test cases to utilize a mock API for uploading summary
statistics.

- **Documentation**
- Comments and documentation have been updated to reflect changes in
data structures and functionalities.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: nikhil-zlai <nikhil@zipline.ai>
Co-authored-by: Chewy Shaw <chewys1024@gmail.com>
Co-authored-by: Piyush Narang <piyush@zipline.ai>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: ken-zlai <ken@zipline.ai>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: ezvz <vzanoyan@gmail.com>