@@ -1,11 +1,4 @@
 #!/bin/bash
-
-# Define variables for clarity
-SPARK_JAR="/app/cli/spark.jar"
-CLOUD_AWS_JAR="/app/cli/cloud_aws.jar"
-ONLINE_CLASS="ai.chronon.integrations.aws.AwsApiImpl"
-
-
 if ! python3.8 generate_anomalous_data.py; then
     echo "Error: Failed to generate anomalous data" >&2
     exit 1
@@ -21,7 +14,7 @@ fi
 
 # Load up metadata into DynamoDB
 echo "Loading metadata.."
-if ! java -cp /app/cli/spark.jar:$CLASSPATH ai.chronon.spark.Driver metadata-upload --conf-path=/chronon_sample/production/ --online-jar=/app/cli/cloud_aws.jar --online-class=ai.chronon.integrations.aws.AwsApiImpl; then
+if ! java -cp $SPARK_JAR:$CLASSPATH ai.chronon.spark.Driver metadata-upload --conf-path=/chronon_sample/production/ --online-jar=$CLOUD_AWS_JAR --online-class=$ONLINE_CLASS; then
   echo "Error: Failed to load metadata into DynamoDB" >&2
   exit 1
 fi
@@ -37,6 +30,21 @@ if ! output=$(java -cp $SPARK_JAR:$CLASSPATH ai.chronon.spark.Driver create-stat
   exit 1
 fi
 echo "DynamoDB Table created successfully!"
+
+
+# Load up summary data into DynamoDB
+echo "Loading Summary.."
+if ! java --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED \
+  -cp $SPARK_JAR:$CLASSPATH ai.chronon.spark.Driver summarize-and-upload \
+  --online-jar=$CLOUD_AWS_JAR \
+  --online-class=$ONLINE_CLASS \
+  --parquet-path="$(pwd)/drift_data" \
+  --table-name=drift_statistics \
+  --time-column=transaction_time; then
+  echo "Error: Failed to load summary data into DynamoDB" >&2
+  exit 1
+fi
+echo "Summary load completed successfully!"
 
 # Add these java options as without them we hit the below error:
 # throws java.lang.ClassFormatError accessible: module java.base does not "opens java.lang" to unnamed module @36328710
